--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<title>Document</title>
+	<title>AirPlane</title>
 </head>
 <body>
 	<div class="panel">
@@ -21,11 +21,11 @@
 		              <p class="my-4 text-center w-350">Introduzca sus datos personales y comience su viaje con nosotros</p>
 		            </div>
 		            <div class="my-5 text-center">
-		              <button class="btn btn-primary boton negrita">REGISTRATE</button>
+		              <button class="btn btn-primary boton negrita hover">REGISTRATE</button>
 		            </div>
 		            <div class="footer centrado my-4">
-		              <a href="" class="color-white text-center centrado ">Iniciar sesión en tu cuenta</a>
-		              <hr>
+		              <a href="login.html" class="text-center centrado ">Iniciar sesión en tu cuenta</a>
+		              <hr class="border-blanco">
 		            </div>
 				</div>
 			</div>
