--- a/login.html
+++ b/login.html
@@ -6,9 +6,8 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<title>Document</title>
+	<title>Login AirPlane</title>
 </head>
 <body>
 	<div class="container">
@@ -30,7 +29,7 @@
                        <a href="" class="text-center centrado">¿Olvidaste tu contraseña?</a>
                     </div>
                     <div class="my-5 text-center">
-		              <button class="btn btn-primary boton negrita">INICIAR SESIÓN</button>
+		              <button class="btn btn-primary boton negrita hover">INICIAR SESIÓN</button>
 		            </div>
 		            <div class="footer centrado my-4">
 		              <a href="" class="color-white text-center centrado ">Crear tu cuenta</a>
